Thu May 18 20:13:00 2000  George Lebl <jirka@5z.com>

	* launcher.c, menu.c: on "destroy" of gnome-dentry-edit, unref it,
	  on _new sink/ref it.  This is really ugly.  The problem is that
	  gnome-dentry-edit destroys itself when it's notebook is destroyed.
	  it should really unref self.  But we can't do that now to keep
	  compat.  This works, but is ugly.  gnome-ditem-edit must be fixed!

Thu May 18 19:23:43 2000  George Lebl <jirka@5z.com>

	* panel-widget.c: use the checking cast AFTER preconditions.

	* menu.c: remove a Fake from the icons to load when destroyed,
	  this should kill the bug where a tearoff is destroyed while
	  it's icons are loading.

2000-05-19  Karl Eichwalder  <ke@suse.de>

	* panel.hints: Remove the comment at the start of the file; since
	it seems to break eastern language environments.
	Reported by KUSANO Takayuki.

2000-05-18  Karl Eichwalder  <ke@suse.de>

	* panel.hints: Replace one "da" by "fi".  Tweak "de" again.

Thu May 18 01:52:07 2000  George Lebl <jirka@5z.com>

	* applet.c: remove ref/sing from register_toy.  It should really not
	  be needed anymore.  Seems to work, BUT it does need testing.  This
	  should kill the leak with adding/removing applets/buttons.

2000-05-18  Jacob Berkman  <jacob@helixcode.com>

	* button-widget.c (button_widget_destroy): free the filename

	* basep-widget.c (basep_widget_destroy): unref the pos

2000-05-17  Jacob Berkman  <jacob@helixcode.com>

	* panel-widget.c (panel_widget_change_params): don't need to check
	for NULL first
	(panel_widget_set_back_pixmap): ditto

2000-05-18  Karl Eichwalder  <ke@suse.de>

	* panel.hints: Improve "de" entries.
	* panel.hints: More sorting.  Remove a doublette.  Add german
	translations.

2000-05-17  Karl Eichwalder  <ke@suse.de>

	* panel.hints: Add some German translations and do sorting; one
	English entry was lost ;-)

2000-05-15  Alexander Kirillov  <kirillov@math.sunysb.edu>

	* panel/help/C/panel.sgml: updated trademark info, version number;